--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,7 +81,7 @@
     <string name="discord_button">Discord</string>
     <string name="telegram_button">Telegram</string>
     <string name="support_title">Support</string>
-    <string name="support_text">Support Rangers Cards on %s.</string>
+    <string name="support_text">Support Rangers Cards on Boosty.</string>
     <string name="about_button">About</string>
     <string name="backup_data_button">Backup Data</string>
     <string name="diagnostics_button">Diagnostics</string>
