--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -72,7 +72,7 @@
   <string name="discord_button">Discord</string>
   <string name="telegram_button">Telegram</string>
   <string name="support_title">Assistance</string>
-  <string name="support_text">Soutiens Rangers Cards via %s.</string>
+  <string name="support_text">Soutiens Rangers Cards via Boosty.</string>
   <string name="about_button">À propos de Rangers Cards</string>
   <string name="backup_data_button">Sauvegarder les données</string>
   <string name="diagnostics_button">Diagnostic</string>
