--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -497,6 +497,11 @@
     <string name="scout_challenge_card_button">Scout challenge card</string>
     <string name="draw_challenge_card_placeholder">Draw or scout card…</string>
     <string name="return_scouted_cards_button">Return scouted cards</string>
+    <string name="return_scouted_cards_ordered_button">Return cards (top/bottom)</string>
+    <string name="apply_bottom_button">Apply (bottom)</string>
+    <string name="apply_top_button">Apply (top)</string>
+    <string name="return_scouted_cards_ordered_bottom_info">Tap cards in any order to return them to bottom.</string>
+    <string name="return_scouted_cards_ordered_top_info">Tap cards in any order to return them to top.</string>
     <string name="show_charts">Show charts</string>
     <string name="hide_charts">Hide charts</string>
 
