--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -68,7 +68,7 @@
     <string name="discord_button">Discord</string>
     <string name="telegram_button">Telegram</string>
     <string name="support_title">Unterstützung</string>
-    <string name="support_text">Unterstütze Rangers Cards via Boosty.</string>
+    <string name="support_text">Unterstütze Rangers Cards via Patreon.</string>
     <string name="about_button">Über Rangers Cards</string>
     <string name="backup_data_button">Daten sichern</string>
     <string name="diagnostics_button">Diagnose</string>
