--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -427,6 +427,24 @@
     <string name="scout_challenge_card_button">Welteffektkarte kundschaften</string>
     <string name="draw_challenge_card_placeholder">Karte ziehen oder kundschaften…</string>
     <string name="return_scouted_cards_button">Gekundschaftete Karten zurücklegen</string>
+    <string name="return_scouted_cards_ordered_button">Karten zurücklegen (auf/unter den Stapel)</string>
+    <string name="apply_bottom_button">Anwenden (unter den Stapel)</string>
+    <string name="apply_top_button">Anwenden (auf den Stapel)</string>
+    <string name="return_scouted_cards_ordered_bottom_info">Tippe auf eine Karte, um sie unter den Welteffektkartenstapel zu legen.</string>
+    <string name="return_scouted_cards_ordered_top_info">Tippe auf eine Karte, um sie auf den Welteffektkartenstapel zu legen. (Du musst alle Karten zurückgelegt haben, um fortzufahren)</string>
     <string name="show_charts">Diagramme anzeigen</string>
     <string name="hide_charts">Diagramme verstecken</string>
+
+    //Card sort options
+    <string name="sort_screen_header">Sortieren nach</string>
+    <string name="equip_sort_header">Last</string>
+    <string name="set_type_sort_header">Kartensettyp</string>
+    <string name="set_position_sort_header">Kartennummer</string>
+    <string name="aspects_sort_header">Aspekt</string>
+    <string name="types_sort_header">Typ</string>
+    <string name="traits_sort_header">Merkmal</string>
+    <string name="sets_sort_header">Kartenset</string>
+    <string name="packs_sort_header">Erweiterung</string>
+    <string name="aspect_card_divider_header">Aspekt</string>
+    <string name="equip_card_divider_header">Last</string>
 </resources>
