--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -522,7 +522,7 @@
     <string name="campaign_expansions">Campaign expansions</string>
 
     //Spire in bloom
-    <string name="spire_in_bloom">Spire In Bloom</string>
+    <string name="spire_in_bloom">Spire in Bloom</string>
     <string name="thoroughfare">Thoroughfare</string>
     <string name="spires_crossing">Spire\'s Crossing</string>
     <string name="brookside">Brookside</string>
